--- a/css/style.css
+++ b/css/style.css
@@ -29,17 +29,18 @@ button:focus {
 =                  Header                     =
 =============================================*/
 
-#header {
-    /* 替網頁最上面的區塊加入背景圖片 */
+#header-container {
+    /* position: relative; */
     border-radius: 0px;
     margin-bottom: 0px;
-    background-image: url("../img/header.png");
-    background-size: cover;
-    background-position: center bottom;
-    height: 550px;
-    /* 讓標題文字垂直置中 */
+    /* background-image: url("../img/header.png"); */
+    /* background-size: cover; */
+    /* background-position: center bottom; */
+    height: 250px;
     display: flex;
     align-items: center;
+    /* background: #000; */
+    overflow: hidden;
 }
 
 
@@ -91,4 +92,60 @@ tbody td:last-child {
 .intro-box:hover {
     background: white;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .25);
+}
+
+
+
+#script-author {
+    position: absolute;
+    /* display: flex; */
+    bottom: 0;
+    right: 0;
+    padding: 0.25em 1em;
+    text-align: right;
+    font-size: 0.6em;
+    background: #00000099!important;
+}
+
+#script-author a {
+    color: #c3ff00;
+}
+
+#header-content {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: black; 
+    pointer-events: none;
+}
+
+#header-container canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0; /* Behind the text */
+}
+
+canvas {
+    display: block;
+    position: absolute; /* Takes it out of the normal flow */
+    top: 0;
+    left: 0;
+    z-index: 0; /* Puts it at the bottom layer */
+}
+
+a {
+  color: #ffb0d9;
+}
+a:hover {
+  color: #b0cfff;
+  text-decoration: underline;
+}
+
+hr {
+    color: #ffb0d9;
 }
